--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
+  "include": ["../common", "."],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
