--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@prisma/client": "^4.8.0",
-    "prisma-api-query-builder": "^0.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "prisma-api-query-builder": "^0.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
