--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
     "@prisma/client": "^4.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "prisma-api-query-builder": "^0.1.3",
+    "prisma-api-query-builder": "^0.1.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -78,5 +78,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
